--- a/Staff/dashboard.css
+++ b/Staff/dashboard.css
@@ -2,32 +2,61 @@ body{
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  background: #E9ECEF;
 }
 
 header{
   position: fixed;
-  background: #22242a;
+ background: linear-gradient(45deg, #ffbc00, #ff0058);
   padding:20px;
   width:100%;
-  height: 80px;
+  height:87px;
   z-index: 1;
 }
 
+.logo{
+  width: 70px;
+  height: 11vh;
+  border-radius: 80%;
+  margin-top: -35px;
+  margin-left: 1em;
+  box-shadow: 0px 0px 2px #5f5f5f,
+  0px 0px 0px 5px #ecf0f3;
+  }
+
 .left_area h3{
-  color: #fff;
-  margin-top: -12px;
+  color: white;
+  margin-top: -50px;
   text-transform: uppercase;
-  font-size: 22px;
-  font-weight: 900;
+  font-size: 18px;
+  font-weight: 800;
+  margin-left: 6em;
 }
 
 .left_area span{
   color: #1dc4e7;
 }
 
+.right_area i{
+  float: right;
+  font-size: 27px;
+  margin-top: -30px;
+  margin-right: 200px;
+}
+
+.right_area i sup{
+  /*margin-right: 10px;*/
+  /*height: 50vh;*/
+  color:white; 
+  height: 3px;
+  padding: 6px;
+  border-radius: 6em
+}
+#jj{
+   margin-right: 260px;
+}
+
 .logout_btn{
-  /*padding: 5px;*/
-  /*background:#1983d3;*/
   text-decoration: none;
   float: right;
   margin-top: -30px;
@@ -44,8 +73,8 @@ header{
 }
 
 .sidebar{
-  background: #2f323a;
-  margin-top: 80px;
+   background: linear-gradient(45deg, #ffbc00, #ff0058);
+  margin-top: 85px;
   padding-top: 30px;
   position: fixed;
   left: 0;
@@ -63,7 +92,7 @@ header{
 }
 
 .sidebar h4{
-  color: #ccc;
+  color: red;
   margin-top: 0;
   margin-bottom: 20px;
 }
@@ -94,6 +123,7 @@ header{
 
 .sidebar a:hover{
   background: #1983d3;
+  border-radius: 6em;
 }
 
 .sidebar i{
@@ -139,7 +169,17 @@ label #sidebar_btn:hover{
   margin-left:265px;
   position: absolute;
   margin-top: 100px;
-  padding: 2px;
+  padding: 15px;
+}
+
+.card{
+  box-shadow: 2px 2px 5px 0;
+  padding: 0.7em; 
+  background: linear-gradient(315deg, #ffbc00, #03a9f4);
+  height: 28vh;
+}
+.col-md-6 h4{
+  color: white;
 }
 
 #check:checked ~ .content{
